cmake_minimum_required (VERSION 3.1)

add_subdirectory(SimpleSimulatorStandard)

add_subdirectory(SimpleSimulatorNextNeighborInteraction)

add_subdirectory(SimpleSolventCreator)

add_subdirectory(ChainWalking_Analyzer_RG2)

add_subdirectory(ChainWalking_Analyzer_Scattering)

add_subdirectory(AnalyzerHeatCapacityNNShellContacts)

add_subdirectory(AnalyzerCounterNNShellContacts)